# scanlation-manager

./: .clang-format  .clang-tidy  .code-workspace  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.json.example
MyBot/: MyBot.vcxproj  MyBot.vcxproj.filters
backend/: .gitignore  README.md  config.json.example  go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/config/: config.go
backend/internal/handlers/: gdrive.go  routes.go  s3.go
backend/internal/services/gdrive/: gdrive.go
backend/internal/services/s3/: s3.go
db/: .gitignore  Schema.md  docker-compose.yml.example
db/migrations/: 001_initial.sql  002_add_supermanager.sql  003_add_user_credentials.sql  004_add_discord_identities.sql  005_enforce_webapp_name.sql  006_add_hiatus_to_series_check_constraint.sql  007_add_unlinked_at_to_discord_identities.sql  008_add_chapter_status.sql  009_role_task_mapping_and_assignment_refactor.sql  010_fix_supermanager_check.sql  011_replace_manager_flags_with_permission_level.sql  012_add_closed_at_to_chapters.sql  013_simplify_chapter_task_tracking.sql  014_add_hiatus_to_chapter_status.sql  015_add_missing_indexes.sql  016_citext_name_columns.sql  017_add_chapter_number.sql  018_cascade_deletes_and_task_retirement.sql  019_uppercase_role_task_names.sql  020_add_volume_to_chapters.sql
discord/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  config.json.example
discord/include/bot/: Bot.hpp
discord/include/bot/eventHandlers/commands/: AddRole.hpp  AddSeries.hpp  DeleteRole.hpp  ListRoleTasks.hpp  MapRoleTask.hpp  Ping.hpp  RegisterUser.hpp  RemoveRole.hpp  RemoveRoleTask.hpp  RetireTask.hpp  SetAlias.hpp  SetProgressChannel.hpp  UnretireTask.hpp  WorkProgress.hpp
discord/include/bot/eventHandlers/commands/add/: AddRole.hpp  AddSeries.hpp  AddTask.hpp
discord/include/bot/eventHandlers/commands/list/: ListRoleTasks.hpp  ListRoles.hpp  ListTasks.hpp
discord/include/bot/eventHandlers/commands/manage/: Chapter.hpp  Series.hpp
discord/include/bot/eventHandlers/commands/modify/: AssignRole.hpp  MapRoleTask.hpp  RetireTask.hpp  SetStaffRole.hpp  UnretireTask.hpp
discord/include/bot/eventHandlers/commands/remove/: DeleteRole.hpp  DeleteTask.hpp  RemoveRole.hpp  RemoveRoleTask.hpp
discord/include/bot/eventHandlers/triggers/: WorkProgress.hpp
discord/include/bot/utils/: ChannelUtils.hpp
discord/include/db/: ConnectionPool.hpp  Db.hpp  DbSession.hpp  PooledConnections.hpp
discord/include/db/repositories/: ChapterAssignments.hpp  Chapters.hpp  DiscordIdentities.hpp  RoleTasks.hpp  Roles.hpp  Series.hpp  SeriesAssignments.hpp  TaskDependencies.hpp  Tasks.hpp  User.hpp  UserAliases.hpp  UserCredentials.hpp  UserRoles.hpp
discord/include/db/utils/: PqxxErrors.hpp
discord/include/models/: ModelChapter.hpp  ModelChapterAssignment.hpp  ModelRole.hpp  ModelRoleTask.hpp  ModelSeries.hpp  ModelSeriesAssignment.hpp  ModelTask.hpp  ModelTaskDependency.hpp  ModelUser.hpp  ModelUserRole.hpp
discord/include/types/: ChapterStatus.hpp  Permission.hpp  SeriesStatus.hpp
discord/include/utils/: ConfigManager.hpp
discord/src/: main.cpp
discord/src/bot/: Bot.cpp
discord/src/bot/eventHandlers/commands/: AddRole.cpp  AddSeries.cpp  AddTask.cpp  AssignRole.cpp  DeleteRole.cpp  DeleteTask.cpp  ListRoleTasks.cpp  ListRoles.cpp  ListTasks.cpp  MapRoleTask.cpp  Ping.cpp  RegisterUser.cpp  RemoveRole.cpp  RemoveRoleTask.cpp  RetireTask.cpp  SetAlias.cpp  SetProgressChannel.cpp  SetStaffRole.cpp  UnretireTask.cpp  WorkProgress.cpp
discord/src/bot/eventHandlers/commands/add/: AddRole.cpp  AddSeries.cpp  AddTask.cpp  RegisterUser.cpp
discord/src/bot/eventHandlers/commands/list/: ListRoleTasks.cpp  ListRoles.cpp  ListTasks.cpp  Ping.cpp
discord/src/bot/eventHandlers/commands/manage/: Chapter.cpp  Series.cpp
discord/src/bot/eventHandlers/commands/modify/: AssignRole.cpp  MapRoleTask.cpp  RetireTask.cpp  SetAlias.cpp  SetProgressChannel.cpp  SetStaffRole.cpp  UnretireTask.cpp  WorkProgress.cpp
discord/src/bot/eventHandlers/commands/remove/: DeleteRole.cpp  DeleteTask.cpp  RemoveRole.cpp  RemoveRoleTask.cpp
discord/src/bot/eventHandlers/triggers/: WorkProgress.cpp
discord/src/bot/utils/: ChannelUtils.cpp
discord/src/db/: ConnectionPool.cpp  Db.cpp  DbSession.cpp  PooledConnections.cpp
discord/src/db/repositories/: ChapterAssignments.cpp  Chapters.cpp  DiscordIdentities.cpp  RoleTasks.cpp  Roles.cpp  Series.cpp  SeriesAssignments.cpp  TaskDependencies.cpp  Tasks.cpp  User.cpp  UserAliases.cpp  UserCredentials.cpp  UserRoles.cpp
discord/src/db/utils/: PqxxErrors.cpp
discord/src/utils/: ConfigManager.cpp
include/: Config.h  ConfigManager.h  DiscordUtils.h  HttpUtils.h
include/bot/eventHandlers/commands/: WorkProgress.hpp
include/discord/: Bot.h  Bot.hpp  DiscordUtils.h
include/discord/eventHandlers/commands/: Ping.hpp  SetProgressChannel.hpp
include/discord/eventHandlers/triggers/: WorkUpdate.hpp
include/discord/utils/: ChannelUtils.hpp
include/models/: ModelWorkProgress.hpp  WorkUpdate.h  WorkUpdate.hpp
include/utils/: ConfigManager.hpp
src/: ConfigManager.cpp  DiscordUtils.cpp  HttpUtils.cpp  main.cpp
src/bot/: Bot.cpp
src/bot/eventHandlers/commands/: WorkProgress.cpp
src/discord/: Bot.cpp  DiscordUtils.cpp
src/discord/eventHandlers/commands/: Ping.cpp  SetProgressChannel.cpp  ping.cpp
src/discord/eventHandlers/triggers/: TriggerWorkUpdate.cpp  WorkProgress.cpp  WorkUpdate.cpp
src/discord/utils/: ChannelUtils.cpp
src/utils/: ConfigManager.cpp  HttpUtils.cpp
